# test-applications

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TerminalMenu/: CMakeLists.txt
TerminalMenu/src/: main.cpp
mdcore-tests/: CMakeLists.txt
mdcore-tests/src/: main.cpp  tests.cpp  tests.h
